# WeekendCompiler

./: .gitignore  Builtins.h  CMakeLists.txt  Codegen.cpp  Codegen.h  CodegenUtils.h  Exp.h  FindLLVM.cmake  FuncDef.h  FuncTable.h  Fwd.h  InputBuffer.h  LICENSE  Lexer.h  Lexer.re  Makefile  Parser.cpp  Parser.h  Printer.cpp  Printer.h  Program.h  README.md  Scope.h  SimpleJIT.h  SimpleJit.cpp  SimpleJit.h  Stmt.h  Syntax.h  Token.cpp  Token.h  TokenStream.h  Type.h  Typechecker.cpp  Typechecker.h  VarDecl.h  Visitor.h  grammar.txt  main.cpp
examples/: factorial.in  sum.in
